[package]
name = "vmp3_disasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced-x86 = "*"
clap = {version = "*", features = ["derive"]}
pelite = "*"
haybale = { version = "*", features = ["llvm-13", "vendor-boolector"] }
llvm-ir = "*"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm13-0"] }
petgraph = "*"
